# Paint

./: .gitmodules  CMakeLists.txt
.cache/clangd/index/: SDL.c.F186B545E037167E.idx  SDL_RLEaccel.c.EA317BF3DCA3F3A1.idx  SDL_RLEaccel_c.h.531FA7B28A3F1D08.idx  SDL_alsa_audio.c.F6BBD26BEDDAA70F.idx  SDL_alsa_audio.h.81615E4F17680FEB.idx  SDL_assert.c.4E97699101D2207E.idx  SDL_assert_c.h.6B2F3D951BBB7E7E.idx  SDL_atomic.c.50EE6E7A0FAE8D08.idx  SDL_audio.c.0F00C5A5C331E398.idx  SDL_audio_c.h.3E858D5DD20F85AD.idx  SDL_audio_channel_converters.h.41C654358E7378BF.idx  SDL_audio_resampler_filter.h.F64BE08419DB1859.idx  SDL_audiocvt.c.47F3AC68E35BC148.idx  SDL_audiodev.c.BFAEBBAAD1B58AAC.idx  SDL_audiodev_c.h.3A8D883F10A82D6E.idx  SDL_audiotypecvt.c.69DD96BFF401D2FD.idx  SDL_blendfillrect.c.E571F65F1ACE3245.idx  SDL_blendfillrect.h.60BC70B8B3E0A792.idx  SDL_blendline.c.8870F708B7F310B6.idx  SDL_blendline.h.314A3A251D13E7A0.idx  SDL_blendpoint.c.6ED60692549B3BDF.idx  SDL_blendpoint.h.5B8625B25FF417F6.idx  SDL_blit.c.1AAE3E300DF64809.idx  SDL_blit.h.55B1EAFBA194A0A5.idx  SDL_blit_0.c.6BE6F68C6FA3DA8F.idx  SDL_blit_1.c.2D75FC0BB3334960.idx  SDL_blit_A.c.FB1DD603434529C6.idx  SDL_blit_N.c.BCDABAA6D871517B.idx  SDL_blit_auto.c.79F227F6FF9C6BBC.idx  SDL_blit_auto.h.D83B31BB4B980D6D.idx  SDL_blit_copy.c.42B3778FE25D2C93.idx  SDL_blit_copy.h.DD3C1EFC8F403A41.idx  SDL_blit_slow.c.848A0E25D8552933.idx  SDL_blit_slow.h.D005FD2A02B225EC.idx  SDL_bmp.c.0928CAC88590B0D2.idx  SDL_clipboard.c.E2EA2E7F7C93CCBC.idx  (+413 more)
src/: main.cpp  paint.cpp  paint.h  utils.h  vec.h
